# libskk

./: .dir-locals.el  .gitignore  .travis.yml  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt
.github/actions/basic-autotools/: action.yaml
.github/actions/basic-meson/: action.yaml
.github/workflows/: test.yaml
c/: SkkCandidate.html  SkkCandidateList.html  SkkCdbDict.html  SkkContext.html  SkkDict.html  SkkFileDict.html  SkkKeyEvent.html  SkkKeyEventFilter.html  SkkNicolaKeyEventFilter.html  SkkRomKanaConverter.html  SkkRule.html  SkkSkkServ.html  SkkUserDict.html  annotation-glossary.html  api-index-full.html  ch01.html  index.html  libskk-keysyms.html  libskk.devhelp2  object-tree.html
ci/: Dockerfile
data/: Makefile.am  README.rules
data/keymap/: Makefile.am  default.json
data/rom-kana/: Makefile.am  README.rom-kana  act.json  azik.json  kzik.json  standard.json  tut-code-touch16.json  tut-code-touch16plus.json  tut-code.json
docs/: Makefile.am  meson.build  skk.1
docs/devhelp/: meson.build
docs/gtk-doc/: meson.build
libskk/: .gitignore  Makefile.am  candidate-list.vala  candidate.vala  cdb-dict.vala  completion-source.vala  completion.vala  config.vapi  context.vala  converter.vala  dict.vala  encoding.vala  expr.vala  file-dict.vala  kana-kan.vala  key-event-filter.vala  key-event.vala  keymap.vala  keysyms.vala  libskk.pc.in  map-file.vala  meson.build  nicola.vala  rom-kana.vala  rule.vala  skk-1.0.deps  skkserv.vala  standard.json  state.vala  typing-rule.vala  user-dict.vala  util.vala  xkbcommon.vapi
m4/: .gitignore
po/: .gitignore  POTFILES.in  POTFILES.skip  ja.po  meson.build
rules/: Makefile.am  README.rules
rules/act/keymap/: hankaku-katakana.json  hiragana.json  katakana.json
rules/act09/: metadata.json
rules/act09/keymap/: hankaku-katakana.json  katakana.json
rules/act09/rom-kana/: default.json
rules/azik/keymap/: common.json  hiragana.json  katakana.json  latin.json  wide-latin.json
rules/azik/rom-kana/: default.json
rules/default/keymap/: default.json  hankaku-katakana.json  hiragana.json  katakana.json
rules/default/rom-kana/: default.json
rules/kzik/: metadata.json
rules/kzik/keymap/: default.json  hiragana.json  katakana.json
rules/kzik/rom-kana/: default.json
rules/nicola/: metadata.json
rules/nicola/keymap/: default.json  kana.json
rules/tcode/: metadata.json
rules/tcode/rom-kana/: default.json
rules/trycode/: metadata.json
rules/trycode/rom-kana/: default.json
rules/tut-code/rom-kana/: touch16+.json
rules/tutcode-touch16x/: metadata.json
tests/: .gitignore  Makefile.am  basic.c  cdb-dict.c  common.c  common.h  context.c  file-dict.c  kana-kan.c  meson.build  rom-kana.c  rule.c  skkserv.c  user-dict.c
tests/rules/test-aborts/: metadata.json
tests/rules/test-aborts/keymap/: hiragana.json
tests/rules/test-inherit-rule-for-dict-edit/: metadata.json
tests/rules/test-inherit-rule-for-dict-edit/keymap/: hiragana.json
tests/rules/test-inherit-rule-for-dict-edit/rom-kana/: default.json
tests/rules/test-selection/: metadata.json
tests/rules/test-selection/keymap/: default.json  hiragana.json  katakana.json
tests/rules/test-sticky/: metadata.json
tests/rules/test-sticky/keymap/: hiragana.json
tests/rules/test-sticky/rom-kana/: default.json
tools/: .gitignore  Makefile.am  fep.vala  fep.wrapper.in  meson.build  skk.1  skk.vala  skkfep.1  skkfep.in  skkfep.wrapper.in  tool.vala
vala/: Skk.Candidate.Candidate.html  Skk.Candidate.annotation.html  Skk.Candidate.html  Skk.Candidate.midasi.html  Skk.Candidate.okuri.html  Skk.Candidate.output.html  Skk.Candidate.text.html  Skk.Candidate.to_string.html  Skk.CandidateList.@get.html  Skk.CandidateList.cursor_down.html  Skk.CandidateList.cursor_pos.html  Skk.CandidateList.cursor_up.html  Skk.CandidateList.html  Skk.CandidateList.next.html  Skk.CandidateList.page_down.html  Skk.CandidateList.page_size.html  Skk.CandidateList.page_start.html  Skk.CandidateList.page_up.html  Skk.CandidateList.page_visible.html  Skk.CandidateList.populated.html  Skk.CandidateList.previous.html  Skk.CandidateList.select.html  Skk.CandidateList.select_at.html  Skk.CandidateList.selected.html  Skk.CandidateList.size.html  Skk.CdbDict.CdbDict.html  Skk.CdbDict.complete.html  Skk.CdbDict.html  Skk.CdbDict.lookup.html  Skk.CdbDict.read_only.html  Skk.CdbDict.reload.html  Skk.Context.Context.html  Skk.Context.add_dictionary.html  Skk.Context.auto_start_henkan_keywords.html  Skk.Context.candidates.html  Skk.Context.clear_output.html  Skk.Context.delete_surrounding_text.html  Skk.Context.dictionaries.html  Skk.Context.egg_like_newline.html  Skk.Context.get_output.html  (+2230 more)
