rulesdir = $(pkgdatadir)/rules

default_files =					\
	default/keymap/default.json		\
	default/keymap/hankaku-katakana.json	\
	default/keymap/hiragana.json		\
	default/keymap/katakana.json		\
	default/keymap/latin.json		\
	default/keymap/wide-latin.json		\
	default/rom-kana/default.json

act_files =					\
	act/keymap/default.json			\
	act/keymap/hankaku-katakana.json	\
	act/keymap/hiragana.json		\
	act/keymap/katakana.json		\
	act/keymap/latin.json			\
	act/keymap/wide-latin.json		\
	act/rom-kana/default.json

azik_files =					\
	azik/keymap/hankaku-katakana.json	\
	azik/keymap/hiragana.json		\
	azik/keymap/katakana.json		\
	azik/keymap/latin.json			\
	azik/keymap/wide-latin.json		\
	azik/rom-kana/default.json

kzik_files =					\
	kzik/keymap/hankaku-katakana.json	\
	kzik/keymap/hiragana.json		\
	kzik/keymap/katakana.json		\
	kzik/keymap/latin.json			\
	kzik/keymap/wide-latin.json		\
	kzik/rom-kana/default.json

tut_code_files =				\
	tut-code/keymap/hankaku-katakana.json	\
	tut-code/keymap/hiragana.json		\
	tut-code/keymap/katakana.json		\
	tut-code/keymap/latin.json		\
	tut-code/keymap/wide-latin.json		\
	tut-code/rom-kana/default.json		\
	tut-code/rom-kana/touch16+.json

nobase_dist_rules_DATA =			\
	$(default_files)			\
	$(act_files)				\
	$(azik_files)				\
	$(kzik_files)				\
	$(tut_code_files)			\
	README.rules

