rulesdir = $(pkgdatadir)/rules

default_files =					\
	default/metadata.json			\
	default/keymap/default.json		\
	default/keymap/hankaku-katakana.json	\
	default/keymap/hiragana.json		\
	default/keymap/katakana.json		\
	default/keymap/latin.json		\
	default/keymap/wide-latin.json		\
	default/rom-kana/default.json

act_files =					\
	act/metadata.json			\
	act/keymap/default.json			\
	act/keymap/hankaku-katakana.json	\
	act/keymap/hiragana.json		\
	act/keymap/katakana.json		\
	act/keymap/latin.json			\
	act/keymap/wide-latin.json		\
	act/rom-kana/default.json

azik_files =					\
	azik/metadata.json			\
	azik/keymap/hankaku-katakana.json	\
	azik/keymap/hiragana.json		\
	azik/keymap/katakana.json		\
	azik/keymap/latin.json			\
	azik/keymap/wide-latin.json		\
	azik/rom-kana/default.json

kzik_files =					\
	kzik/metadata.json			\
	kzik/keymap/hankaku-katakana.json	\
	kzik/keymap/hiragana.json		\
	kzik/keymap/katakana.json		\
	kzik/keymap/latin.json			\
	kzik/keymap/wide-latin.json		\
	kzik/rom-kana/default.json

tut_code_files =				\
	tut-code/metadata.json			\
	tut-code/keymap/hankaku-katakana.json	\
	tut-code/keymap/hiragana.json		\
	tut-code/keymap/katakana.json		\
	tut-code/keymap/latin.json		\
	tut-code/keymap/wide-latin.json		\
	tut-code/rom-kana/default.json		\
	tut-code/rom-kana/touch16+.json

nicola_files =					\
	nicola/metadata.json			\
	nicola/keymap/default.json		\
	nicola/keymap/kana.json			\
	nicola/keymap/latin.json		\
	nicola/keymap/katakana.json		\
	nicola/keymap/hankaku-katakana.json	\
	nicola/keymap/wide-latin.json		\
	nicola/keymap/hiragana.json		\
	nicola/rom-kana/default.json

tcode_files =					\
	tcode/rom-kana/default.json		\
	tcode/metadata.json			\
	tcode/keymap/latin.json			\
	tcode/keymap/katakana.json		\
	tcode/keymap/hankaku-katakana.json	\
	tcode/keymap/wide-latin.json		\
	tcode/keymap/hiragana.json

trycode_files =					\
	trycode/rom-kana/default.json		\
	trycode/metadata.json			\
	trycode/keymap/latin.json		\
	trycode/keymap/katakana.json		\
	trycode/keymap/hankaku-katakana.json	\
	trycode/keymap/wide-latin.json		\
	trycode/keymap/hiragana.json

nobase_dist_rules_DATA =			\
	$(default_files)			\
	$(act_files)				\
	$(azik_files)				\
	$(kzik_files)				\
	$(tut_code_files)			\
	$(nicola_files)				\
	$(tcode_files)				\
	$(trycode_files)			\
	README.rules
